Turned Company to MVVM Architecture.